Styled layouts, add friends db

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,1 +1,5 @@
-Hello World
+<div class="mt-4 p-5 bg-secondary text-white rounded">
+<h1> Welcome to the Friend's App</h1>
+<br>
+<p>Add your friends using the Friends button</p>
+</div>
