--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -11,32 +11,32 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :first_name, style: "display: block" %>
-    <%= form.text_field :first_name %>
+  
+  <div class="field form-group">
+    <%= form.text_field :first_name, class:"form-control", placeholder:"First Name" %>
   </div>
+  <br></br>
+
+  <div class="field form-group">
+    <%= form.text_field :last_name, class:"form-control", placeholder:"Last Name" %>
+  </div>
+  <br></br>
+
+  <div class="field form-group">
+    <%= form.text_field :phone, class:"form-control", placeholder:"Phone number" %>
+  </div>
+  <br></br>
+
+  <div class="field form-group">
+    <%= form.text_field :email_address, class:"form-control", placeholder:"email" %>
+  </div>
+  <br></br>
 
   <div>
-    <%= form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name %>
+    <%= form.text_field :twitter, class:"form-control", placeholder:"@yourhandle" %>
   </div>
-
+  <br></br>
   <div>
-    <%= form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone %>
-  </div>
-
-  <div>
-    <%= form.label :email_address, style: "display: block" %>
-    <%= form.text_field :email_address %>
-  </div>
-
-  <div>
-    <%= form.label :twitter, style: "display: block" %>
-    <%= form.text_field :twitter %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= form.submit class:"btn btn-primary" %>
   </div>
 <% end %>
