--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,5 +1,5 @@
 <p style="color: green"><%= notice %></p>
-<table class="table table-striped table-responsive">
+<table class="table table-striped table-responsive table-hover">
   <thead class="table-dark">
     <tr>
       <th>First Name</th>
@@ -7,7 +7,7 @@
       <th>Phone </th>
       <th>Email Address</th>
       <th>Twitter Handle</th>
-      <th colspan=3></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
   <tbody> 
