--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,5 +1,9 @@
 <p style="color: green"><%= notice %></p>
 <div class="mt-4 p-5 bg-secondary text-white rounded">
+  
+  <img>
+    <%= @friend.images %>
+  </img>
   <h1>
     <%= @friend.first_name %>
     <%= @friend.last_name %>
