--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -2,7 +2,7 @@
 <div class="mt-4 p-5 bg-secondary text-white rounded">
   
   <img>
-    <%= @friend.images %>
+    <%= @friend.image %>
   </img>
   <h1>
     <%= @friend.first_name %>
